# watchy_py

./: .gitignore  README.md  constraints.txt  pyproject.toml
assets/: zen_dots_39-patched-0.py
assets/archive/fonts/: symbols_14.py
font_previews/: README.md  app.py  bridge.py  dynamic_font.py
font_previews/shims/: esp32.py  framebuf.py  machine.py  micropython.py  uctypes.py
font_previews/templates/: index.html
new_src/: README.md
new_src/ble_server/: README.md  __main__.py  agent.py  calendar_fetcher.py  calendar_merge.py  crypto.py  data_provider.py  fetcher.py  google_calendar.py  microsoft_calendar.py  open_meteo.py  protocol.py  secrets.example.py  server.py  sign_in.py
new_src/docs/: ble-protocol.md  design-overview.md  display-layout.md  update-strategy.md  weather_types.md
new_src/src/: ble_client.py  ble_crypto.py  ble_protocol.py  boot.py  clock_ring.py  constants.py  exit_debug.py  main.py  renderer.py  secrets.example.py  test_bottom_half.py  test_clock.py  test_top_half.py  update_time.py  utils.py  watchy.py  watchy_old.py
new_src/src/assets/arcs/: q1_thick.py  q1_thin.py  q2_thick.py  q2_thin.py  q3_thick.py  q3_thin.py  q4_thick.py  q4_thin.py
new_src/src/assets/fonts/: fira_sans_regular_14.py  fira_sans_regular_16.py  fira_sans_regular_20.py  symbols_14.py  symbols_16.py  zen_dots_39.py
new_src/src/assets/icons/: __init__.py  cloudy_light.py  cloudy_thick.py  cloudy_thin.py  night.py  night_rain.py  night_snow.py  placeholder.py  rain.py  severe_weather.py  snow.py  (+5 more)
new_src/src/lib/: bm8563.py  display.py
src/lib/: bm8563.py
