[tool.poetry]
name = "watchy"
version = "0.1.0"
description = "the code running on my Watchy"
authors = ["Huey <hello@huey.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
freetype-py = "^2.3.0"
Pillow = "^10.0"
cairosvg = "^2.8.2"
bless = "^0.2.5"
msal = "^1.28"
requests = "^2.28"

[tool.poetry.group.dev.dependencies]
esptool = "^4.3"
rshell = "^0.0.31"
mypy = "^0.982"
black = "^22.10.0"
flask = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
